# airflow-plugin-glue_presto_apas

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  run-example.sh
example/: example.py  example.sql  setup.sql
src/airflow/hooks/: glue_presto_apas.py
src/airflow/operators/: glue_add_partition.py  glue_presto_apas.py
src/airflow/plugin/: glue_presto_apas.py  presto_apas.py
src/airflow/plugins/: glue_presto_apas.py
tests/: test_airflow_plugin_presto_apas.py
tests/airflow/plugin/: test_glue_presto_apas.py
