[tool.poetry]
name = "airflow-plugin-presto_apas"
version = "0.1.0"
description = ""
authors = ["Civitaspo <civitaspo@gmail.com>"]
packages = [
  { include = "airflow", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
