[tool.poetry]
name = "airflow-plugin-glue_presto_apas"
version = "0.0.1"
description = ""
authors = ["Civitaspo <civitaspo@gmail.com>"]
packages = [
  { include = "airflow", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
apache-airflow = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."airflow.plugins"]
glue_presto_apas = "airflow.plugins.glue_presto_apas:GluePrestoApasPlugin"
