[tool.poetry]
name = "airflow-plugin-glue_presto_apas"
version = "0.0.4"
description = "An Airflow Plugin to Add a Partition As Select(APAS) on Presto that uses Glue Data Catalog as a Hive metastore."
readme = "README.md"
authors = ["Civitaspo <civitaspo@gmail.com>"]
repository = "https://github.com/civitaspo/airflow-plugin-glue_presto_apas"
homepage = "https://github.com/civitaspo/airflow-plugin-glue_presto_apas"
inclede = [
  "CHANGELOG.md"
]
packages = [
  { include = "airflow", from = "src" },
]
# See. https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.6",
]

[tool.poetry.dependencies]
python = "^3.6"
apache-airflow = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."airflow.plugins"]
glue_presto_apas = "airflow.plugins.glue_presto_apas:GluePrestoApasPlugin"
